--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background-color: black;
     color: gray;
     font-size: 25px;
+    cursor: default;
 }
 
 .nav-item:hover {
@@ -43,7 +44,8 @@ h2 {
 }
 
 .href:hover {
-    color: darkgray
+    color: crimson;
+    cursor: pointer;
 }
 
 #about {
@@ -94,4 +96,26 @@ h2 {
 .social li {
     display: inline-block;
     margin: 0 10px;
+}
+
+#contact-form .input {
+    background-color: rgb(29, 29, 29);
+    color: crimson;
+    /* font-weight: bold; */
+    border: none;
+}
+
+.form-control:focus {
+    box-shadow: 0 0 0 0.20rem rgba(220, 20, 60, 35%);
+}
+
+.btn-danger {
+    background-color: crimson;
+    padding: 8px 16px;
+    margin: 4px 2px;
+    border-radius: 20px;
+}
+
+.btn-danger:hover {
+    background-color: rgba(220, 20, 60, 0.593);
 }
