--- a/style.css
+++ b/style.css
@@ -5,6 +5,33 @@ body {
     cursor: default;
 }
 
+body::-webkit-scrollbar {
+    width: 8px;
+    /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+    background: transparent;
+    /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: crimson;
+    /* color of the scroll thumb */
+    border-radius: 20px;
+    /* roundness of the scroll thumb */
+    /* border: 3px solid orange; */
+    /* creates padding around scroll thumb */
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(161, 9, 40);
+}
+
+body::-webkit-scrollbar-thumb: {
+    background-color: crimson;
+}
+
 .nav-item {
     font-weight: bold;
 }
